# databricks_prefect_pipelines

./: .editorconfig  .env_template  .gitignore  .prefectignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/actions/setup_python/: action.yml
.github/workflows/: checks.yml  deploy.yml  github-actions.yml  uploads.yml
src/flows/: dummy.py  job_run.py  one.py  two.py  wait_for_another.py
src/flows/maintenance/: make_block_remote_storage.py
src/flows_lib/: dummy.py
src/pipelines/some/: some_notebook.py
src/pipelines_lib/: databricks.py  spark.py
src/pipelines_lib/schemas/: data_schemas.py
src/scripts/: build_upload_lib.py  upload_notebooks.py
tests/unittests/pipelines/: test_some_notebook.py
